--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           yarn install
           yarn generate
       - name: Init new repo in $BUILD_FOLDER and commit generated files
-      - run: |
+        run: |
           grep -rnwl "<link rel=\"prefetch\"" $BUILD_FOLDER | xargs sed -i 's$<link rel="prefetch" href="[^"]*\.\(jpg\|png\|webm\|jpeg\|svg\|gif\)">$$g'
           cd $BUILD_FOLDER
           touch .nojekyll
