commit action without yarn run & Redeploment of Github Pages using gh-actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,9 @@ jobs:
           node-version: "16"
           cache: 'yarn'
       - run: |
-          yarn install
-          yarn generate
+          # yarn install
+          # yarn generate
+          touch .gitignore
       - name: Init new repo in $BUILD_FOLDER and commit generated files
         run: |
           grep -rnwl "<link rel=\"prefetch\"" $BUILD_FOLDER | xargs sed -i 's$<link rel="prefetch" href="[^"]*\.\(jpg\|png\|webm\|jpeg\|svg\|gif\)">$$g'
