commit action to add permission & Redeploment of Github Pages using gh-actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,8 @@ name: Deploy to Github pages
 on:
   push:
     branches: [main]
+permission:
+  content: write
 env:
   BUILD_FOLDER: .output/public
 
