--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Github pages
 on:
   push:
     branches: [main]
-permission:
+permissions:
   content: write
 env:
   BUILD_FOLDER: .output/public
